# ISTSEH

./: .firebaserc  .gitignore  README.md  docker-compose.yml  package.json
MEDSAI/: AddAppointmentView.swift  AppSettings.swift  AppointmentRepo.swift  Calendarview.swift  ContentView.swift  Helpers.swift  Info.plist  Item.swift  LandingPageView.swift  LoginPageView.swift  MedViews.swift  (+11 more)
MEDSAI.xcodeproj/: project.pbxproj
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260403_0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routers/: appointments.py  auth.py  care_codes.py  caregiver.py  drug_intel.py  me.py  medications.py  search_history.py
backend/app/core/: config.py  security.py
backend/app/integrations/: openai_client.py  openfda_client.py
backend/app/models/: __init__.py  appointment.py  base.py  care_code.py  caregiver_relation.py  device_session.py  enums.py  medication.py  password_reset_token.py  refresh_token.py  search_history.py  user.py  user_medication.py
backend/app/repositories/: appointment_repository.py  medication_repository.py  search_repository.py  user_repository.py
backend/app/schemas/: appointment.py  auth.py  caregiver.py  drug_intel.py  medication.py  search.py  user.py
backend/app/services/: appointments.py  auth.py  caregiver.py  drug_intel.py  medications.py  search_history.py
backend/scripts/: import_supabase_data.py
backend/tests/: test_drug_intel_schema.py  test_security.py
(+39 files in other folders)
